# uuid-by-string

./: .gitignore  Cargo.toml  LICENSE  README.md  index.d.ts  package.json
.github/workflows/: rust.yml
src/: common.rs  debug.js  for_namespace.rs  generate_uuid.rs  generate_uuid_with_namespace.rs  index.js  lib.rs  main.rs  tests.rs  uuid.rs  uuid_no_namespace.rs
tests/: default.rs  long_text.rs  namespaces.rs  no_namespace.rs  test.js
tests/__snapshots__/: test.js.snap
tests/common/: japanese_text.rs
