[package]
name = "uuid-by-string"
description = "Generating uuid-hash from string"
version = "3.0.1"
edition = "2021"
authors = ["Oleg \"OSA413\" Sokolov", "Danakt Saushkin"]
repository = "https://github.com/OSA413/uuid-by-string"
homepage = "https://github.com/OSA413/uuid-by-string"
license = "MIT"
keywords = [
    "uuid",
    "guid",
    "rfc4122",
    "hash"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-5 = "0.10.6"
regex = "1.10.2"
sha1 = "0.10.6"